fixed font for better readability

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,7 +7,7 @@
 body {
 	color: $color-black;
 	background: $color-white;
-	font-family: 'Inconsolata', ;
+	font-family: 'Inconsolata';
 	font-size: 100%;
 	font-weight: 400;
 }
@@ -15,10 +15,12 @@ h1 {
 	margin-bottom: 5px;
 }
 p {
+	font-family: 'georgia';
 	font-size: 1em;
 	line-height: 150%;
 }
 a {
+	font-family: 'Inconsolata';
   color: $color-link;
   text-decoration: none;
   &:visited {
@@ -167,6 +169,8 @@ ul {
 			font-weight: 700;
 		}
 		em {
+			font-size: 1.1em;
+			font-family: monospace;
 			font-style: italic;
 		}
 		ul {
